<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >




        <TextView
            android:id="@+id/tvAuthor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/author_label"
            android:textSize="10sp" />





<EditText
    android:id="@+id/edTxtAuthor"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:ems="10"
    android:textSize="10sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >










        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.09"
            android:text="@string/title_label"
            android:textSize="10sp" />




        <EditText
            android:id="@+id/edTxtTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.03"
            android:ems="10"
            android:textSize="10sp" />

    </LinearLayout>



    <LinearLayout
        android:layout_width="205dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal" >




        <Button
            android:id="@+id/btnAuthor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnAuthorTitle"
            android:textSize="10sp" />




        <Button
            android:id="@+id/btnAuTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnAuthorTitleTitle"
            android:textSize="10sp" />




        <Button
            android:id="@+id/btnClear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal|right"
            android:text="@string/btnClearTitle"
            android:textSize="10sp" />

    </LinearLayout>





    <ImageView
        android:id="@+id/img_view_author"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:src="@drawable/background_008" />





    <ImageView
        android:id="@+id/img_view_cover"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:src="@drawable/background_009" />

</LinearLayout>
